--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplmvrs.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplmvrs.properties
@@ -124,7 +124,9 @@ errorObjetosDB=La tabla 'MVRS' no se encuentra en ObjetosDB. Porfavor comunicars
 errorRegNewMvr=Los campos Fecha Inicial-Motivo son obligatorios.
 errorFechas=La fecha inicial es nula y/o la fecha final es menor a la fecha inicial.
 errorRegNewOtro=Los campos Fecha Inicial, Fecha Final Y Tipo Certificado son obligatorios.
+errorFechasDup=Para agregar registros debe ingresar fechas no usadas en registros anteriores.
 errorFechasOC=la fecha inicial es menor que la fecha final.
+errorEstado=El camp Estado no se debe modificar
 salir=Salir
 infoRegistro=Registros:
 # 
