--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciasueldo.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciasueldo.properties
@@ -32,7 +32,7 @@ tipodeentidad=Tipo de Entidad
 consultar=Consultar Sueldo Actual
 todos=Consultar Todos
 consultarC=Sueldo Actual
-todosC=Mostrar Todos
+todosC= Todos
 #LOV MOTIVO
 motivoM=Motivo Cambio Sueldo
 buscarM=Buscar Motivo Cambio Sueldo: 
@@ -157,3 +157,4 @@ infoRegistro=Registros:
 # 
 empleado=Empleado:
 codigo=Codigo:
+fRepetidas=Fechas no repetidas
