29 de Abril de 2016 Ximena Valero Modificación de algunas pantallas en carpeta personal
pendientes por revisar

--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/declarante.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/declarante.properties
@@ -80,3 +80,6 @@ fechas=Los campos de fecha inicial y fecha final, no concuerdan. Por favor, revi
 traslapamiento=Hay un traslapamiento en las fechas. Por favor, revisar las fechas
 errorFechas=La Fecha Inicial o la Fecha Final son nulas
 fechanula=La fecha final no puede ser nula, si se desea mostrar la lista de valores
+#
+empleado=Empleado
+documento=Documento
