--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplsets.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplsets.properties
@@ -1,6 +1,6 @@
 #Tabla arriba
 titulo=Historicos SETS
-informacion=Informacion SET
+informacionset=Informacion SET
 declarante=Declarante
 #Toolbar
 guardar=Guardar
@@ -10,9 +10,9 @@ filtrar=Activar Filtrado
 xls=Exportar a XLS
 xml=Exportar a XML
 pdf=Exportar a PDF
-nuevo=Nuevo SET
-eliminar=Borrar SET
-duplicar=Duplicar SET
+nuevo=Nuevo Registro
+eliminar=Borrar Registro
+duplicar=Duplicar Registro
 rastro=Rastro
 #Tabla
 inicial=Fecha Inicial
@@ -29,7 +29,7 @@ no=No
 limpiar=Limpiar
 agregar=Agregar
 cancelar=Cancelar
-atencion=\u00a1PRECAUCI\u00d3N...!
+precaucion=\u00a1PRECAUCI\u00d3N...!
 error=ERROR
 informacion=\u00a1INFORMACI\u00d3N...!
 aceptar=Aceptar
