--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplubicaciongeografica.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplubicaciongeografica.properties
@@ -9,9 +9,9 @@ filtrar=Activar Filtrado
 xls=Exportar a XLS
 xml=Exportar a XML
 pdf=Exportar a PDF
-nuevo=Nuevo Ubicacion Geogr\u00e1fica
-eliminar=Borrar Ubicaci\u00f3n Geogr\u00e1fica
-duplicar=Duplicar Ubicaci\u00f3n Geogr\u00e1fica
+nuevo=Nuevo Registro
+eliminar=Borrar Registro
+duplicar=Duplicar Registro
 rastro=Rastro
 #Tabla
 fecha=Fecha
@@ -49,7 +49,7 @@ no=No
 limpiar=Limpiar
 agregar=Agregar
 cancelar=Cancelar
-atencion=\u00a1PRECAUCI\u00d3N...!
+precaucion=\u00a1PRECAUCI\u00d3N...!
 error=ERROR
 informacion=\u00a1INFORMACI\u00d3N...!
 aceptar=Aceptar
