--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciaformapago.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciaformapago.properties
@@ -18,7 +18,7 @@ no=No
 limpiar=Limpiar
 agregar=Agregar
 cancelar=Cancelar
-atencion=\u00a1PRECAUCI\u00d3N...!
+precaucion=\u00a1PRECAUCI\u00d3N...!
 error=ERROR
 informacion=\u00a1INFORMACI\u00d3N...!
 aceptar=Aceptar
