--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciajornada.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciajornada.properties
@@ -11,9 +11,9 @@ filtrar=Activar Filtrado
 xls=Exportar a XLS
 xml=Exportar a XML
 pdf=Exportar a PDF
-nuevo=Nueva Vigencia Jornada
-eliminar=Borrar Vigencia Jornada
-duplicar=Duplicar Vigencia Jornada
+nuevo=Insertar Registro
+eliminar=Borrar Registro
+duplicar=Duplicar Registro
 rastro=Rastro
 salir=Salir
 #Tablas
