--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/personaindividual.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/personaindividual.properties
@@ -255,7 +255,7 @@ aletarTiposTrabajadoresNL=La combinacion para el tipo trabajador y la norma labo
 errorCamposObligatorios=Los campos marcados con * son obligatorios. Por favor revise que estos campos no se encuentren vacios.
 procesoGuardadoOK=Los datos del nuevo empleado fueron guardados con exito
 errorCamposAlternativos=Hay inconsistencia en los datos opcionales del empleado. Por favor verificar estos datos.
-ingresarPersonal=Ingresar Nuevo Personal
+ingresarPersonal=Ingresar Personal
 errorFechasEmpleado=Existe un error en alguna fecha del empleado. Por favor revisar para continuar con el proceso.
 infoAfiliacion=Para ingresar el campo Afiliacion es necesario ingresar primero la empresa.
 infoUbicacionUbicacion=Para ingresar el campo Ubicacion es necesario ingresar primero la empresa.
