03 de Mayol de 2016 Ximena Valero Modificación de algunas pantallas en carpeta personal pendientes por revisar

--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplviajero.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplviajero.properties
@@ -18,9 +18,9 @@ no=No
 limpiar=Limpiar
 agregar=Agregar
 cancelar=Cancelar
-precaucion=\u00a1PRECAUCI\u00d3N...!
-error=ERROR
-informacion=\u00a1INFORMACI\u00d3N...!
+precaucion=\u00a1Precauci\u00f3n!
+error=\u00a1Error!
+informacion=Informaci\u00f3n
 aceptar=Aceptar
 atras=Atras
 validacionNuevo=Para agregar una nueva legislacion es necesario adicionar:
