--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciatipotrabajador.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciatipotrabajador.properties
@@ -9,9 +9,9 @@ filtrar=Activar Filtrado
 xls=Exportar a XLS
 xml=Exportar a XML
 pdf=Exportar a PDF
-nuevo=Nueva Vigencia Tipo Trabajador
-eliminar=Borrar Vigencia Tipo Trabajador
-duplicar=Duplicar Vigencia Tipo Trabajador
+nuevo=Nuevo Registro
+eliminar=Borrar Registro
+duplicar=Duplicar Registro
 rastro=Rastro
 #Tabla
 fecha=Fecha
@@ -107,13 +107,15 @@ no=No
 limpiar=Limpiar
 agregar=Agregar
 cancelar=Cancelar
-atencion=ATENCI\u00d3N...!
+precaucion=\u00a1Precauci\u00f3n!
+error=\u00a1Error!
+informacion=Informaci\u00f3n
 aceptar=Aceptar
 atras=Atras
 validacionNuevo=Para agregar una nueva Vigencia Tipo Trabajador es necesario adicionar:
 cambiosRealizados=\u00bfDesea guardar los cambios realizados?
 cambio=A\u00fan hay cambios sin guardar, \u00bfdesea guardar los cambios?
-refrescar= Refrescar
+refrescar= Deshacer cambios no guardados
 errorFechaVTT=La fecha vigencia es menor a 01/01/1900.
 errorRegRetiro=El campo fecha retiro es vacio y/o la observacion posee mas de 500 caracteres
 errorRegPensionado=El campo fecha inicial es vacio y/o el campo Clase Pension es vacio.
@@ -122,3 +124,6 @@ salir=Salir
 #VALIDACIONES
 validacionFechas=La fecha ya esta registrada, por favor ingrese otra.
 infoRegistro=Registros:
+
+empleado=Empleado:
+codigo=C\u00f3digo
