04 de Mayo de 2016 Ximena Valero Modificación de EmplNovedad.xhtml, emplacumulados, EmplVigenciaTipoTrabajador Falta terminar la revisión de la lista de valores en EmplVigenciaTipoTrabajador debido al problema ya comentado pendientes por revisar

--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplacumulados.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplacumulados.properties
@@ -1,7 +1,7 @@
 titulo=Acumulados
 acumulados=Acumulados del Empleado
 #Tabla
-conceptoc=Concepto C.
+conceptoc=C\u00f3digo
 codigoconcepto=Codigo del Concepto
 descripcionconcepto=Descripcion Concepto
 desde=Desde
@@ -90,7 +90,9 @@ no=No
 limpiar=Limpiar
 agregar=Agregar
 cancelar=Cancelar
-atencion=ATENCI\u00d3N...!
+atencion=\u00a1Precauci\u00f3n!
+error=\u00a1Error!
+informacion=Informaci\u00f3n
 aceptar=Aceptar
 atras=Atras
 validacionNuevo=Para agregar un nuevo acto inseguro es necesario adicionar:
@@ -98,3 +100,6 @@ cambiosRealizados=\u00bfDesea guardar los cambios realizados?
 cambio=A\u00fan hay cambios sin guardar, \u00bfdesea guardar los cambios?
 refrescar= Deshacer cambios no guardados
 infoRegistro=Registros:
+
+empleado=Empleado:
+codigo=C\u00f3digo
