--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplnovedad.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplnovedad.properties
@@ -75,7 +75,9 @@ no=No
 limpiar=Limpiar
 agregar=Agregar
 cancelar=Cancelar
-atencion=ATENCI\u00d3N...!
+atencion=\u00a1Precauci\u00f3n!
+error=\u00a1Error!
+informacion=Informaci\u00f3n
 aceptar=Aceptar
 atras=Atras
 validacionNuevo=Para agregar una nueva novedad es necesario adicionar:
@@ -83,5 +85,8 @@ cambiosRealizados=\u00bfDesea guardar los cambios realizados?
 cambio=A\u00fan hay cambios sin guardar, \u00bfdesea guardar los cambios?
 refrescar= Deshacer cambios no guardados
 salir=Salir
-
+#
 infoRegistro=Registros:
+#
+empleado=Empleado:
+codigo=C\u00f3digo
