--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/personaindividual.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/personaindividual.properties
@@ -18,13 +18,15 @@ no=No
 limpiar=Limpiar
 agregar=Agregar
 cancelar=Cancelar
-atencion=ATENCI\u00d3N...!
+informacion=Informaci\u00f3n
+error=\u00a1Error!
+atencion=\u00a1Precauci\u00f3n!
 aceptar=Aceptar
 atras=Atras
 validacionNuevo=Para agregar un nuevo acto inseguro es necesario adicionar:
 cambiosRealizados=\u00bfDesea guardar los cambios realizados?
 cambio=A\u00fan hay cambios sin guardar, \u00bfdesea guardar los cambios?
-refrescar= Refrescar
+refrescar= Deshacer cambios no guardados
 salir=Salir
 ##
 
@@ -270,3 +272,4 @@ informacion=Informaci\u00f3n
 operacionProceso=Operacion en proceso. Por favor espere...
 nit=NIT
 errorEmailPersona=El email ingresado es incorrecto.
+infoRegistro=Registros:
