5 de mayo de 2016 Edwin Hastamorir Modificación visual de la pagina empleadoindividual Creación de la página generaconsulta.xhtml con sus correspondientes controlador, administrar. Se adicionó una consulta a recordatorios. Se corrigió la forma de acceder a las consultas de la tabla recordatorios utilizando una imagen, para que no muestre la imagen por default si ya tiene una imagen de consulta.
Pendiente:
Validar funcionamiento de las listas de empleadoindividual.
Corregir error en el componente de fechas de empleadoindividual.
Correcciones a la pagina nreportenomina.

--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/empleadoindividual.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/empleadoindividual.properties
@@ -21,66 +21,77 @@ rastro=Rastro
 refrescar=Deshacer cambios no guardados
 salir=Salir
 #Arriba
-apellidosynombre=Apellidos y Nomb. 
-apellidosynombreTT=Apellidos y Nombres de la Persona
-primerapellidowm=Primer Apellido
-segundoapellidowm=Segundo Apellido
-primernombrewm=Primer Nombre
-identificacion=Identificacion
-tipowm=Tipo
-identificacionwm=Identificacion
-digitoverif=Digito Verif.
-digitoverifTT=Digito de Verificaci\u00f3n del documento.
-lugardeexpedicionwm=Lugar de Expedici\u00f3n
-edad=Edad(A\u00f1os)
+primerapellido=Primer apellido
+primerapellidotp=Primer apellido
+primerapellidowm=VACIO
+segundoapellido=Segundo apellido
+segundoapellidotp=Segundo apellido
+segundoapellidowm=VACIO
+primernombre=Nombres
+primernombrewm=VACIO
+segundonombre=Sobrenombre
+segundonombrewm=VACIO
+identificacion=Identificaci\u00f3n
+tipowm=VAC
+numidentificacion=N\u00famero identificaci\u00f3n
+identificacionwm=VACIO
+digitoverif=D.V.
+digitoverificacionwm=#
+digitoveriftp=Digito de verificaci\u00f3n del documento.
+ciudaddocumento=Ciudad expedici\u00f3n
+lugardeexpedicionwm=VACIO
+edad=Edad (A\u00f1os)
 sexo=Sexo
 sexom=MASCULINO
 sexof=FEMENINO
-fechanacimiento=Fecha Nacimiento
-fechanacimientowm=Fecha Nac.
-ciudad=Ciudad
-lugarnacimientowm=Lugar de Nac.
-grupos=Grupo S.
+fechanacimiento=Fecha nacimiento
+fechanacimientowm=dd/MM/yyyy
+ciudadnacimiento=Ciudad nacimiento
+lugarnacimientowm=VACIO
+grupos=G.S.
 gruposTT=Grupo Sanguineo.
 gruposa=A
 gruposab=AB
 gruposb=B
 gruposo=O
-factorrh=Factor RH
+factorrh=RH
+factorrhtp=Factor RH
 email=Email
-emailwm=Direcci\u00f3n de Correo Electr\u00f3nico
-certificadojudicial=Certificado Judicial
-certificadojudicialwm=N\u00ba Certificado Judicial
+emailwm=VACIO
+certjudicial=Certificado Judicial
+certjudicialtp=Certificado Judicial
+certjudicialwm=VACIO
 fechavencimiento=Fecha Vencimiento
-fechavencimientowm=Fecha Ven.
+fechavencimientowm=VACIO
 libretamilitar=Libreta Militar
-libretamilitarwm=N\u00ba Libreta Militar
+libretamilitarwm=VACIO
 distritomilitar=Distrito Militar
 clase=Clase
 viviendapropia=Vivienda Propia
 sii=SI
 noo=NO
-vehiculopropio=Vehiculo Propio
+vehiculopropio=Veh\u00edculo Propio
 placa=Placa
-placawm=Placa
+placawm=VACIO
 parqueo=Parqueo
-parqueowm=N\u00ba Parq.
-rutadetransporte=Ruta de Transporte
-rutadetransportewm=Ruta
+parqueowm=VACIO
+rutadetransporte=Ruta Transporte
+rutadetransportewm=VACIO
 cargopostulado=Cargo Postulado
-cargopostuladowm=Cargo Postulado
+cargopostuladowm=VACIO
 vehiculoempresa=Vehiculo Empresa
 fechafallecimiento=Fecha Fallecimiento
-fechafallecimientowm=Fecha Fall.
+fechafallecimientowm=dd/MM/yyyy
 tallas=Tallas
-anteriorescontratos=Anteriores Contratos
+anteriorescontratos=An. contratos
+anteriorescontratostp=Anteriores contratos
 perfilprofesional=Perfil Profesional
 informeejecutivo=Informe Ejecutivo
 #UBICACION
-telefonos=Telefonos
+telefonos=Tel\u00e9fonos
 direcciones=Direcciones
 estadocivil=Estado Civil
-informacionadicional=Informacion Adicional
+informacionadicional=Informaci\u00f3n Adicional
 reemplazos=Reemplazos
 #Educacion
 idiomas=Idiomas
@@ -112,10 +123,12 @@ nombrelargoTD=Nombre Largo
 buscarC=Buscar Ciudad: 
 nombreC=Nombre
 departamentoC=Departamento
+paisC=Pa\u00eds
 #LOV CARGO POSTULADO
 cargopostuladoCP=Cargo Postulado: 
 buscarCP=Buscar Cargo: 
 nombreCP=Nombre
+empresaCP=Empresa
 #RASTROS
 latabla=La tabla '
 confirmarRastro=' tiene rastros para este registro, \u00bfDesea continuar?
@@ -179,9 +192,9 @@ no=No
 limpiar=Limpiar
 agregar=Agregar
 cancelar=Cancelar
-atencion=\u00a1INFORMACI\u00d3N!
-alerta=\u00a1PRECAUCI\u00d3N!
-error=\u00a1ERROR!
+informacion=Informaci\u00f3n
+error=\u00a1Error!
+atencion=\u00a1Precauci\u00f3n!
 aceptar=Aceptar
 atras=Atras
 cambiosRealizados=\u00bfDesea guardar los cambios realizados?
