--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/busquedaavanzada.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/busquedaavanzada.properties
@@ -289,7 +289,7 @@ buscarCDE=Buscar Configuracion:
 campo=Campo
 detalleBusqueda=Detalle de Busqueda
 eliminarColumna=Borrar Columna
-anadirParametros=[ A\u00f1adir a Parametros ]
+anadirParametros=A\u00f1adir Parametros
 refrescar=Refrescar
 textAnadirParametros=A\u00f1adir el resultado de la busqueda a Parametros de Liquidacion
 datosPersonales=Datos Personales
