--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/busquedaavanzada.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/busquedaavanzada.properties
@@ -433,3 +433,4 @@ personal=Personal
 salir=Salir
 errorFormatoNumDocumento=El numero de documento no es valido.
 cancelar=Cancelar
+infoRegistro=Registros: 
