--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/estructuraplanta.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/estructuraplanta.properties
@@ -21,7 +21,7 @@ filtrar=Activar Filtrado
 xls=Exportar a XLS
 xml=Exportar a XML
 pdf=Exportar a PDF
-nuevo=Nuevo Registro
+nuevo=Insertar Registro
 eliminar=Borrar Registro
 duplicar=Duplicar Registro
 rastro=Rastro
@@ -85,12 +85,14 @@ no=No
 limpiar=Limpiar
 agregar=Agregar
 cancelar=Cancelar
-atencion=ATENCI\u00d3N...!
+informacion=Informaci\u00f3n
+error=\u00a1Error!
+atencion=\u00a1Precauci\u00f3n!
 aceptar=Aceptar
 atras=Atras
 cambiosRealizados=\u00bfDesea guardar los cambios realizados?
 cambio=A\u00fan hay cambios sin guardar, \u00bfdesea guardar los cambios?
-refrescar= Refrescar
+refrescar=Deshacer cambios no guardados
 #RASTRO
 errorRastroHistorico=La tabla no tiene rastros historicos.
 errorRegistroRastro=El registro seleccionado no tiene rastros.
