23 de Mayo de 2016 Ximena Valero Modificación de parametricas en carpeta Personal

--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/ibcautoliquid.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/ibcautoliquid.properties
@@ -66,7 +66,9 @@ no=No
 limpiar=Limpiar
 agregar=Agregar
 cancelar=Cancelar
-atencion=ATENCI\u00d3N...!
+precaucion=\u00a1Precauci\u00f3n!
+error=\u00a1Error!
+informacion=Informaci\u00f3n
 aceptar=Aceptar
 atras=Atras
 validacionNuevo=Para agregar un nuevo IBC es necesario adicionar:
@@ -80,3 +82,5 @@ nombre=Nombre
 salir=Salir
 #
 empleado=Empleado
+#
+infoRegistro=Registros:
