--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/tercero.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/tercero.properties
@@ -57,9 +57,9 @@ filtrar=Activar Filtrado
 xls=Exportar a XLS
 xml=Exportar a XML
 pdf=Exportar a PDF
-nuevo=Nuevo Tercero
-eliminar=Borrar Tercero
-duplicar=Duplicar Tercero
+nuevo=Nuevo Registro
+eliminar=Borrar Registro
+duplicar=Duplicar Registro
 rastro=Rastro
 #Nuevo Registro Cual pagina
 nrpi=Nuevo Registro Para Ingreso
@@ -106,7 +106,7 @@ observacionNS=Observaci\u00f3n:
 observacionWM=Observaci\u00f3n
 ciudadNS=Ciudad: 
 ciudadWM=Ciudad
-#Duplciar registro Tercero Sucursal
+#Duplicar registro Tercero Sucursal
 duplicarregistrosucursal=Duplicar Registro Sucursal
 #LOV EMPRESAS
 empresasE=Empresas
@@ -162,7 +162,9 @@ no=No
 limpiar=Limpiar
 agregar=Agregar
 cancelar=Cancelar
-atencion=ATENCI\u00d3N...!
+precaucion=\u00a1Precauci\u00f3n!
+error=\u00a1Error!
+informacion=Informaci\u00f3n
 aceptar=Aceptar
 atras=Atras
 validacionNuevo=Para agregar un nuevo ausentismo es necesario adicionar:
@@ -179,5 +181,22 @@ errorObjetosDB=La tabla no se encuentra en ObjetosDB. Porfavor comunicarse con s
 errorDatosNullTerceros=Los campos NIT - Nombre son obligatorios.
 errorDatosNullSucursal=El campo Codigo Sucursal es obligatorio
 salir=Salir
-
+#
 infoRegistro=Registros:
+#Tooltips Tp:Tooltip
+nombreTp=Nombre del Tercero
+nit=Nit del Tercero
+D=D\u00edgito de Verificaci\u00f3n
+nitA=Nit Alternativo de Tercero
+cssT=C\u00f3digo Autorizado para Entidades de Seguro Social
+cspT=C\u00f3digo Autorizado para Entidades de Pensi\u00f3n
+cscT=C\u00f3digo Autorizado para Entidades de Caja de Compensaci\u00f3n
+tConsolidador=Descripci\u00f3n del Centro de Costo del Tercero
+nitConsolida=C\u00f3digo del Centro de Costo
+ciudadTp=Ciudad
+codAlterno=C\u00f3digo Alternativo del Tercero
+tipo=Tipos de Nit
+codSAP=C\u00f3digo Tercero SAP
+sucursalTp=C\u00f3digo de la Sucursal
+patronalTp=C\u00f3digo Patronal
+observacion=Observaciones
