24 de Mayo de 2016
Juan Carlos Cruz

Modificación pantallas parametricas de carpeta personal

pendientes por revisar

--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/cargo.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/cargo.properties
@@ -22,6 +22,7 @@ competenciasCargos=Competencias del Cargo
 descripcion=Descripcion
 #Tabla TiposDetalles
 tiposDetalles=Descripcion de las Propiedades del Cargo
+tiposDetallesB=Propiedades del Cargo
 enfoque=Enfoque
 #Toolbar
 guardar=Guardar
@@ -35,9 +36,11 @@ nuevo=Nuevo Registro
 eliminar=Borrar Registro
 duplicar=Duplicar Registro
 rastro=Rastro
+salir=salir
 #Dialogos
 rpter=Rastros Para Tablas
 seleccione=Seleccione la tabla para generar proceso de rastro
+seleccioneH=Seleccione la tabla para generar proceso de rastro Historico
 #Dialogos Errores
 errorDatosNullCargo=Los campos Codigo-Nombre son obligatorios.
 errorDescripcionCargo=El campo Nombre no puede ser mayor a 50 caracteres.
@@ -161,12 +164,14 @@ no=No
 limpiar=Limpiar
 agregar=Agregar
 cancelar=Cancelar
-atencion=ATENCI\u00d3N...!
+informacion=Informaci\u00f3n
+error=\u00a1Error!
+atencion=\u00a1Precauci\u00f3n!
 aceptar=Aceptar
 atras=Atras
 cambiosRealizados=\u00bfDesea guardar los cambios realizados?
 cambio=A\u00fan hay cambios sin guardar, \u00bfdesea guardar los cambios?
-refrescar= Refrescar
+refrescar=Deshacer cambios no guardados
 buscarCargo=Buscar Cargo
 mostrarTodos=Mostrar Todos
 #RASTRO
@@ -183,3 +188,4 @@ ingresoNuevoDetalleCargo=\u00bfDesea crear el registro del detalle de cargo?
 errorBorradoCargo=Para eliminar el Cargo es necesario que no tenga registros Detalles del Cargo asociados.
 buscarCargoD=Cargos
 buscarBC=Buscar Cargo: 
+infoRegistro=Registros:
