--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/centrocosto.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/centrocosto.properties
@@ -20,9 +20,9 @@ filtrar=Activar Filtrado
 xls=Exportar a XLS
 xml=Exportar a XML
 pdf=Exportar a PDF
-nuevo=Nuevo Centro Costo
-eliminar=Borrar Centro Costo
-duplicar=Duplicar Centro Costo
+nuevo=Insertar Registro
+eliminar=Borrar Registro
+duplicar=Duplicar Registro
 rastro=Rastro
 #Otros
 vacio=No se encontrar\u00f3n resultados para la b\u00fasqueda
@@ -32,13 +32,15 @@ no=No
 limpiar=Limpiar
 agregar=Agregar
 cancelar=Cancelar
-atencion=ATENCI\u00d3N...!
+informacion=Informaci\u00f3n
+error=\u00a1Error!
+atencion=\u00a1Precauci\u00f3n!
 aceptar=Aceptar
 atras=Atras
 validacionNuevo=Para agregar un nuevo ausentismo es necesario adicionar:
 cambiosRealizados=\u00bfDesea guardar los cambios realizados?
 cambio=A\u00fan hay cambios sin guardar, \u00bfdesea guardar los cambios?
-refrescar= Refrescar
+refrescar=Deshacer cambios no guardados
 #LOV TIPO CENTRO COSTO
 tiposcentrocostoTCC=Tipos Centro Costo
 buscarTCC=Buscar Tipo Centro Costo: 
@@ -120,3 +122,4 @@ errorTablaConRastro=La tabla no existe en RASTROSTABLAS, pero tiene registros as
 errorTablaSinRastro=La tabla no existe en RASTROSTABLAS, y no tiene registros asociados.
 seleccionarRegistro=Por favor seleccione un registro.
 errorObjetosDB=La tabla 'CENTROSCOSTOS' no se encuentra en ObjetosDB. Porfavor comunicarse con soporte.
+infoRegistro=Registros:
