--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/estructuraplanta.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/estructuraplanta.properties
@@ -7,7 +7,7 @@ empresa=Empresa
 nit=NIT
 estado=Estado
 #Tabla Estructuras
-estructura=Estructura
+estructura=Estructuras
 cant=Cant.
 headerCant=Cantidad de cargos a controlar en la estructura(opcional para manejo de planta)
 headerReal=Cantidad de cargos de empleados activos asignados a la estructura
@@ -102,3 +102,4 @@ seleccionarRegistro=Por favor seleccione un registro.
 errorObjetosDB=La tabla no se encuentra en ObjetosDB. Porfavor comunicarse con soporte.
 errorCodigo=El codigo registrado ya se encuentra en uso por otro registro.
 salir=Salir
+infoRegistro=Registros:
