--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/busquedaavanzada.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/busquedaavanzada.properties
@@ -193,7 +193,9 @@ papelesD=Papales
 buscarPC=Buscar Papel: 
 motivoCargoD=Motivos Cargos
 buscarMC=Buscar Motivo: 
-atencion=ATENCI\u00d3N...!
+informacion=Informaci\u00f3n
+error=\u00a1Error!
+atencion=\u00a1Precauci\u00f3n!
 errorExceptionFechas=Un error en las fechas ha ocurrido, intente nuevamente
 errorFechasRequeridas=Para ingresar la fecha final es necesario que la fecha inicial ya se encuentre registrada
 errorFechasIngresadas=La fecha final se menor que la fecha inicial
@@ -290,7 +292,7 @@ campo=Campo
 detalleBusqueda=Detalle de Busqueda
 eliminarColumna=Borrar Columna
 anadirParametros=A\u00f1adir Parametros
-refrescar=Refrescar
+refrescar=Deshacer cambios no guardados
 textAnadirParametros=A\u00f1adir el resultado de la busqueda a Parametros de Liquidacion
 datosPersonales=Datos Personales
 textDatosPersonales=En \u00e9ste bloque usted podr\u00e1 realizar la busqueda a trav\u00e9s de varios parametros como n\u00famero de documento, la fecha de nacimiento, sexo y ciudad de nacimiento. Los parametros que utilizan rangos de fechas funcionan asi:
