--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/ciudades.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/ciudades.properties
@@ -14,9 +14,9 @@ filtrar=Activar Filtrado
 xls=Exportar a XLS
 xml=Exportar a XML
 pdf=Exportar a PDF
-nuevo=Nueva Ciudad
-eliminar=Borrar Ciudad
-duplicar=Duplicar Ciudad
+nuevo=Insertar Registro
+eliminar=Borrar Registro
+duplicar=Duplicar Registro
 rastro=Rastro
 #Fieldset Tablas
 ciudades=Ciudades
@@ -28,12 +28,14 @@ no=No
 limpiar=Limpiar
 agregar=Agregar
 cancelar=Cancelar
-atencion=ATENCI\u00d3N...!
+informacion=Informaci\u00f3n
+error=\u00a1Error!
+atencion=\u00a1Precauci\u00f3n!
 aceptar=Aceptar
 atras=Atras
 validacionNuevo=Para agregar una nueva ciudad es necesario adicionar:
 cambiosRealizados=\u00bfDesea guardar los cambios realizados?
-refrescar= Refrescar
+refrescar= Deshacer cambios no guardados
 #NuevoRegistro
 nuevoregistro= Nuevo Registro
 ingresarnuevo= Agregar nueva ciudad
