--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/estructuraplanta.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/estructuraplanta.properties
@@ -27,7 +27,7 @@ duplicar=Duplicar Registro
 rastro=Rastro
 #Dialogos
 rpter=Rastros Para Tablas
-seleccione=Seleccione la tabla para generar proceso de rastro
+seleccioneH=Seleccione la tabla para generar proceso de rastro Historico
 #Dialogos Errores
 errorDatosNullEstructura=Los campos Codigo-Estructura son obligatorios.
 errorFecha=La fecha es menor a 01/01/1900 y/o la fecha se encuentra vacia.
