--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/tipocontrato.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/tipocontrato.properties
@@ -38,6 +38,7 @@ diasLaborales=Dias Laborables Especiales
 #Dialogos Errores
 errorDatosNullTipoContrato=Los campos Codigo - Nombre son obligatorios.
 errorNombreTipoContrato=El campo Nombre no puede ser mayor a 30 caracteres.
+errorRepetidosTipoContrato=El nuevo Nombre y Codigo no pueden estar repetidos en otros registros.
 errorDatosNullDiasLab=Los campos Tipo Dia - Dia son obligatorios.
 #LOV TIPOS DIAS
 tiposdiasTD=Tipos Dias
@@ -97,12 +98,14 @@ no=No
 limpiar=Limpiar
 agregar=Agregar
 cancelar=Cancelar
-atencion=ATENCI\u00d3N...!
+informacion=Informaci\u00f3n
+error=\u00a1Error!
+atencion=\u00a1Precauci\u00f3n!
 aceptar=Aceptar
 atras=Atras
 cambiosRealizados=\u00bfDesea guardar los cambios realizados?
 cambio=A\u00fan hay cambios sin guardar, \u00bfdesea guardar los cambios?
-refrescar= Refrescar
+refrescar=Deshacer cambios no guardados
 #RASTRO
 errorRastroHistorico=La tabla no tiene rastros historicos.
 errorRegistroRastro=El registro seleccionado no tiene rastros.
@@ -123,3 +126,7 @@ headerForza=Forza Cotizacion Pila
 headerHL=Horas Laborables
 errorCodigoClonado=El codigo nuevo ya existe.
 salir=Salir
+rastrosH=Rastros Historicos
+verificarRastrosTablasH=Seleccione una Tabla para buscar rastros Historicos
+#Conteo
+infoRegistro=Registros:
