--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/deporte.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/deporte.properties
@@ -11,16 +11,16 @@ filtrar=Activar Filtrado
 xls=Exportar a XLS
 xml=Exportar a XML
 pdf=Exportar a PDF
-nuevo=Nuevo Deporte
-eliminar=Borrar Deporte
-duplicar=Duplicar Deporte
+nuevo=Nuevo Registro
+eliminar=Eliminar Registro
+duplicar=Duplicar Registro
 rastro=Rastro
 #Dialogo
-validacionDuplicarVigencia=Necesita: 
+validacionDuplicarDeporte=Necesita: 
 validacionBorrar=No se puede borrar este elemento porque esta relacionado con otra tabla
 mostrarBorrados1=Se han borrado 
 mostrarBorrados2= Registros
-validacionNuevaCentroCosto=Para agregar es necesario adicionar: 
+validacionNuevoDeporte=Para agregar es necesario adicionar: 
 #RASTRO
 confirmarRastro=La tabla 'DEPORTES' tiene rastros para el registro seleccionado, \u00bfdesea continuar?
 confirmarRastroHistorico=La tabla DEPORTES tiene rastros historicos, \u00bfDesea continuar?
@@ -53,10 +53,13 @@ no=No
 limpiar=Limpiar
 agregar=Agregar
 cancelar=Cancelar
-atencion=ATENCI\u00d3N...!
+informacion=Informaci\u00f3n
+error=\u00a1Error!
+atencion=\u00a1Precauci\u00f3n!
 aceptar=Aceptar
 atras=Atras
 validacionNuevo=Para agregar un nuevo acto inseguro es necesario adicionar:
 cambiosRealizados=\u00bfDesea guardar los cambios realizados?
 cambio=A\u00fan hay cambios sin guardar, \u00bfdesea guardar los cambios?
-refrescar= Refrescar
+refrescar= Deshacer cambios no guardados
+infoRegistros=Registros:
