--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/vigenciadeporte.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/vigenciadeporte.properties
@@ -15,16 +15,20 @@ vacio=No se encontrar\u00f3n resultados para la b\u00fasqueda
 lovvacio=No se encontraron resultados con el criterio de busqueda.
 si=Si
 no=No
+empleado=Empleado:
+codigo=Codigo:
 limpiar=Limpiar
 agregar=Agregar
 cancelar=Cancelar
-atencion=ATENCI\u00d3N...!
+informacion=Informaci\u00f3n
+error=\u00a1Error!
+atencion=\u00a1Precauci\u00f3n!
 aceptar=Aceptar
 atras=Atras
-validacionNuevo=Para agregar un nuevo ausentismo es necesario adicionar:
+validacionNuevo=Para agregar una nueva vigencia deporte es necesario adicionar:
 cambiosRealizados=\u00bfDesea guardar los cambios realizados?
 cambio=A\u00fan hay cambios sin guardar, \u00bfdesea guardar los cambios?
-refrescar= Refrescar
+refrescar=Deshacer cambios no guardados
 #RASTRO
 confirmarRastro=La tabla 'VIGENCIASDEPORTES' tiene rastros para el registro seleccionado, \u00bfdesea continuar?
 confirmarRastroHistorico=La tabla VIGENCIASDEPORTES tiene rastros historicos, \u00bfDesea continuar?
@@ -33,6 +37,7 @@ errorRegistroRastro=El registro seleccionado no tiene rastros.
 errorTablaConRastro=La tabla no existe en RASTROSTABLAS, pero tiene registros asociados, \u00bfDesea continuar?
 errorTablaSinRastro=La tabla no existe en RASTROSTABLAS, y no tiene registros asociados.
 seleccionarRegistro=Por favor seleccione un registro.
+errorDuplicarVigenciaD=El registro ingresado ya existe.
 errorObjetosDB=La tabla 'VIGENCIASDEPORTES' no se encuentra en ObjetosDB. Porfavor comunicarse con soporte.
 salir=Salir
 titulo=Hist\u00f3rico de Deportes
@@ -44,6 +49,10 @@ puntajeI=Puntaje Individual
 puntajeCI=Puntaje Cualitativo Individual
 puntajeG=Puntaje Grupal
 puntajeCG=Puntaje Cualitativo Grupal
+puntajeIcorto=P Individual
+puntajeCIcorto=P.C.Individual
+puntajeGcorto=P Grupal
+puntajeCGcorto=P.C.Grupal
 deporteM=Deportes
 buscarM=Buscar Deporte: 
 errorRegNew=Los campos Fecha Inicial y Deporte son obligatorios.
@@ -57,9 +66,9 @@ fechaIncialN=Fecha Inicial:
 fechaFinalN=Fecha Final: 
 deporteN=Deporte: 
 puntajeIN=Puntaje Individual: 
-puntajeCIN=Puntaje Cualitativo Ind.: 
+puntajeCIN=Puntaje Cualitativo Individual: 
 puntajeGN=Puntaje Grupal: 
-puntajeCGN=Puntaje Cualitativo Gr.: 
+puntajeCGN=Puntaje Cualitativo Grupal: 
 editarFechaInicialD=Fecha Inicial Deporte
 editarFechaFinalD=Fecha Final Deporte
 editarDescripcionD=Nombre Deporte
@@ -67,15 +76,16 @@ editarIndividualD=Puntaje Individual
 editarCIndividualD=Puntaje Cualitativo Individual
 editarGrupalD=Puntaje Grupal
 editarCGrupalD=Puntaje Cualitativo Grupal
-fechaInicialXX=Fecha Inicial
-fechaFinalXX=Fecha Final
+fechaInicialXX=Fecha_Inicial
+fechaFinalXX=Fecha_Final
 deporteX=Deporte
 puntajeIXX=Puntaje_Individual
-puntajeIX=Puntaje Individual
+puntajeIX=Puntaje_Individual
 puntajeCIXX=Puntaje_Cualitativo_Individual
-puntajeCIX=Puntaje Cualitativo Individual
+puntajeCIX=Puntaje_Cualitativo_Individual
 puntajeGXX=Puntaje_Grupal
 puntajeGX=Puntaje_Grupal
 puntajeCGXX=Puntaje_Cualitativo_Grupal
-puntajeCGX=Puntaje Cualitativo Grupal
+puntajeCGX=Puntaje_Cualitativo_Grupal
 nombre=Nombre
+infoRegistros=Registros:
