--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/pry_cliente.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/pry_cliente.properties
@@ -115,14 +115,14 @@ cambiosRealizados=\u00bfDesea guardar los cambios realizados?
 cambio=A\u00fan hay cambios sin guardar, \u00bfdesea guardar los cambios?
 refrescar=Deshacer cambios no guardados
 #RASTRO
-confirmarRastro=La tabla 'PROYECTOS' tiene rastros para el registro seleccionado, \u00bfdesea continuar?
-confirmarRastroHistorico=La tabla PROYECTOS tiene rastros historicos, \u00bfDesea continuar?
+confirmarRastro=La tabla 'PROYECTO_CLIENTE' tiene rastros para el registro seleccionado, \u00bfdesea continuar?
+confirmarRastroHistorico=La tabla PROYECTO_CLIENTE tiene rastros historicos, \u00bfDesea continuar?
 errorRastroHistorico=La tabla no tiene rastros historicos.
 errorRegistroRastro=El registro seleccionado no tiene rastros.
 errorTablaConRastro=La tabla no existe en RASTROSTABLAS, pero tiene registros asociados, \u00bfDesea continuar?
 errorTablaSinRastro=La tabla no existe en RASTROSTABLAS, y no tiene registros asociados.
 seleccionarRegistro=Por favor seleccione un registro.
-errorObjetosDB=La tabla 'PROYECTOS' no se encuentra en ObjetosDB. Porfavor comunicarse con soporte.
+errorObjetosDB=La tabla 'PROYECTO_CLIENTE' no se encuentra en ObjetosDB. Porfavor comunicarse con soporte.
 #Dialogo
 errorFechas=la fecha inicial es menor a 01/01/1900 y/o la fecha final es menor que la fecha inicial
 salir=Salir
