11 de mayo de 2016 Edwin Hastamorir Se modificó la página nreportenomina.xhtml para reordenar el formulario de parametros de reportes. Se modificaron las hojas de estilos para que no mostrara los efectos de relieve en las cajas de texto y en el resaltado en los registros de la tabla. Se modificaron las entidades empleados y empresas para que no trajera los campos que no se van a mostrar en la interfaz gráfica de usuario.
Pendiente:
Validar funcionamiento de las listas de empleadoindividual.
Corregir error en el componente de fechas de empleadoindividual.
Correcciones a la pagina nreportenomina.

--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/nreportenomina.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/nreportenomina.properties
@@ -24,7 +24,8 @@ nuevo=Nuevo Registro
 eliminar=Eliminar Registro
 duplicar=Duplicar Registro
 #Arriba
-fechadesde=Fecha Desde
+fechadesde=Fecha desde
+fechahasta=fecha hasta
 empleadodesde=Empleado Desde
 estado=Estado
 cerrado=CERRADO
