--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/tiposTrabajadores.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/tiposTrabajadores.properties
@@ -19,7 +19,7 @@ seleccione=Seleccione la tabla para generar proceso de rastro
 #Dialogos Errores
 errorDatosNullTipoContrato=Los campos Codigo - Descripci\u00f3n son obligatorios.
 errorRepetidosTipoContrato=La nueva descripci\u00f3n y Codigo no pueden estar repetidos en otros registros.
-#LOV TIPOS DIAS
+#LOV TIPOS Cotizantes
 tiposCot=Tipos Cotizaciones
 #Dialogos
 nuevoregistropagina=Nuevo Registro Pagina
@@ -51,15 +51,15 @@ dias=D\u00edas
 fecha=Fecha
 #Nuevo Registro
 nuevoregistroTT=Nuevo Registro Tipos Trabajadores
-ingresarnuevoTC=Ingresar nueva informaci\u00f3n tipo Trabajador
+ingresarnuevoTT=Ingresar nueva informaci\u00f3n tipo Trabajador
 codigoNTT=Codigo:
 descripcionNTT=Descripci\u00f3n:
 factorDNTT=Factor Desalarizaci\u00f3n:
 tipoCotNTT=Tipo Cotizante:
-diasvacNoOrdNTT=Dias de vacaciones no ordinarios:
+diasvacNoOrdNTT=Dias vacaciones no ordinarios:
 diasvacNTT=Dias de vacaciones:
 #Duplicar Registro
-duplicarregistroTC=Duplicar Registro Tipos Trabajadores
+duplicarregistroTT=Duplicar Registro Tipos Trabajadores
 #Editar Tipos de Trabajadores
 editarCodigoTT=Codigo - Tipo Trabajadores
 editarDescripcionTT=Descripci\u00f3n - Tipo Trabajadores
@@ -82,7 +82,6 @@ diasvacX=Dias de vacaciones
 diasvacXX=Dias_de_vacaciones
 #Otros
 vacio=No se encontrar\u00f3n resultados para la b\u00fasqueda
-lovvacio=No se encontraron resultados con el criterio de busqueda.
 si=Si
 no=No
 limpiar=Limpiar
@@ -109,7 +108,6 @@ codigoNClonarTT=Nuevo Codigo
 nombreBClonarTT=Nombre Tipo Trabajador Origen
 clonar=Clonar
 tipoTrabajadorD=Tipos Trabajadores Actuales Para Tomar de Referencia
-buscarTT=Buscar Tipo Trabajador: 
 errorClonadoTipoT=Los campos Codigo - Nombre del Tipo Trabajador Nuevo y Origen son obligatorios.
 continuarOperacionClonado=\u00bfContinuar con la operacion de clonado?
 errorCodigoClonado=El codigo nuevo ya existe.
@@ -118,3 +116,19 @@ rastrosH=Rastros Historicos
 infoRegistro=Registros:
 plantillaC=TT Plantilla
 plantilla=Tipo Trabajador Plantilla
+#
+buscarTT=Buscar Tipo Trabajador: 
+buscarTC=Buscar Tipo Cotizante: 
+#SELECCIONABLES
+SI=SI
+NO=NO
+EMPLEADO=EMPLEADO
+PENSIONADO=PENSIONADO 
+DISPONIBLE=DISPONIBLE 
+LIQUIDADO=LIQUIDADO  
+UNIVERSITARIO=UNIVERSITARIO 
+DESTAJO=DESTAJO
+ACTIVO=ACTIVO 
+RETIRADO=RETIRADO
+INGRESO=INGRESO
+ING-SMLV=ING-SMLV
